fix overflow

--- a/themes/hyaline-theme/assets/css/main.css
+++ b/themes/hyaline-theme/assets/css/main.css
@@ -194,13 +194,17 @@ code span{
 
 div.highlight
 {
-  /* padding: 0./*  */5em; */
   text-wrap: wrap;
+    /* inline-size: max-content; */
+    overflow-wrap: break-word;
+  font-size: 0.75em;
+
 }
 
 pre {
   padding: 0.25em;
   margin: 1em;
+  text-wrap: wrap;
 }
 
 .highlight {
